[package]
authors = ["ihciah <ihciah@gmail.com>"]
edition = "2021"
name = "mini-rust-runtime"
version = "0.1.0"
license = "MIT"

[dependencies]
polling = "2"
socket2 = "0.4"
libc = "0.2"
nix = "0.23"
scoped-tls = "1"
futures = "0.3"
waker-fn = "1"
pin-utils = "0.1"
rustc-hash = "1"

tokio = {version = "1", features = ["io-util"]}
